use redis and systemd

--- a/meson.build
+++ b/meson.build
@@ -1,3 +1,13 @@
 project('data_management_equipment_utilization_capture', 'c')
-gtkdep = dependency('gtk+-3.0')
-executable('main', 'main.c', dependencies : gtkdep)
+gtk_dep = dependency('gtk+-3.0')
+hiredis_dep = dependency('hiredis')
+systemd_dep = dependency('libsystemd', required: true)
+
+cmd = run_command('bash', '-c', 'echo $HOME', check: false)
+home_dir = cmd.stdout().strip()
+
+executable('gui', 'gui.c', dependencies : [gtk_dep, hiredis_dep, systemd_dep], install: true, install_dir: home_dir)
+install_data('theme.css', install_dir: home_dir)
+
+run_target('cppcheck', command : ['cppcheck', '--enable=all', '--project=' + join_paths(meson.build_root(), 'compile_commands.json')])
+
