split gui into multiple files
Starting from this chage, the background process will become part
of the main app. There will be no need for a separate daemon.

--- a/meson.build
+++ b/meson.build
@@ -9,15 +9,15 @@ cmd = run_command('bash', '-c', 'echo $HOME', check: false)
 home_dir = cmd.stdout().strip()
 
 executable(
-  'safersender',
-  'sender.c',
-  dependencies : [hiredis_dep, pcre_dep, systemd_dep],
-  install: true,
-  install_dir: home_dir / 'bin'
-)
-executable(
-  'safergui',
-  'gui.c',
+  'safer',
+  [
+    'main.c',
+    'gui.c',
+    'gui.h',
+    'gui_functions.c',
+    'gui_functions.h',
+    'utils.h'
+  ],
   dependencies : [gtk_dep, hiredis_dep, systemd_dep],
   install: true,
   install_dir: home_dir / 'bin'
