create a redisContext for every get_int_key()

--- a/meson.build
+++ b/meson.build
@@ -32,6 +32,7 @@ run_target(
   command : [
     'cppcheck',
     '--enable=all',
+    '--suppress=missingIncludeSystem',
     '--project=' + join_paths(meson.build_root(),
     'compile_commands.json')
   ]
