--- a/meson.build
+++ b/meson.build
@@ -1,8 +1,9 @@
-project('data_management_equipment_utilization_capture', 'c')
+project('data_management_equipment_utilization_capture', 'c', version: '0.1.0')
 
 gtk_dep = dependency('gtk+-3.0', required: true)
 hiredis_dep = dependency('hiredis', required: true)
 pcre_dep = dependency('libpcre2-8', required: true)
+python_dep = dependency('python3', modules: ['redis'], required: true)
 systemd_dep = dependency('libsystemd', required: true)
 
 cmd = run_command('bash', '-c', 'echo $HOME', check: false)
@@ -21,7 +22,7 @@ executable(
     'src/worker.h',
     'src/worker.c'
   ],
-  dependencies : [gtk_dep, hiredis_dep, pcre_dep, systemd_dep],
+  dependencies : [gtk_dep, hiredis_dep, pcre_dep, python_dep, systemd_dep],
   install: true,
   install_dir: home_dir / 'bin'
 )
