move python scripts to its own directory

--- a/meson.build
+++ b/meson.build
@@ -26,7 +26,7 @@ executable(
   install: true,
   install_dir: home_dir / 'bin'
 )
-install_data('hat.py', install_dir: home_dir / 'bin')
+install_data('python/hat.py', install_dir: home_dir / 'bin')
 install_data('theme.css', install_dir: home_dir)
 
 run_target(
