--- a/meson.build
+++ b/meson.build
@@ -1,11 +1,5 @@
 project('data_management_equipment_utilization_capture', 'c', version: '0.1.0')
 
-glib_dep = dependency('glib-2.0', required: true)
-gtk_dep = dependency('gtk+-3.0', required: true)
-hiredis_dep = dependency('hiredis', required: true)
-pcre_dep = dependency('libpcre2-8', required: true)
-python_dep = dependency('python3', modules: ['redis'], required: true)
-systemd_dep = dependency('libsystemd', required: true)
 
 cmd = run_command('bash', '-c', 'echo $HOME', check: false)
 home_dir = cmd.stdout().strip()
@@ -25,7 +19,15 @@ executable(
     'src/worker.h',
     'src/worker.c'
   ],
-  dependencies : [glib_dep, gtk_dep, hiredis_dep, pcre_dep, python_dep, systemd_dep],
+  dependencies : [
+    dependency('glib-2.0', required: true),
+    dependency('gtk+-3.0', required: true),
+    dependency('hiredis', required: true),
+    dependency('libpcre2-8', required: true),
+    dependency('python3', modules: ['redis'], required: true),
+    dependency('libsystemd', required: true)
+  ],
+  link_args: '-lm',
   install: true,
   install_dir: home_dir / 'bin'
 )
